--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,6 +5,7 @@
 	box-sizing: border-box;
 }
 
+
 body {
 	background: #f6f5f7;
 	display: flex;
@@ -15,6 +16,11 @@ body {
 	height: 100vh;
 	margin: -20px 0 50px;
 }
+.testred{
+	color:red;
+	
+  }
+
 
 h1 {
 	font-weight: bold;
@@ -35,6 +41,7 @@ p {
 
 span {
 	font-size: 12px;
+	cursor: pointer;
 }
 
 a {
